...
                            .frame(width: 300)
                            .multilineTextAlignment(.center)
                            .accessibilityIdentifier("EmailField")
                        
                        // Password SecureField
...
                            .frame(width: 300)
                            .multilineTextAlignment(.center)
                            .accessibilityIdentifier("PasswordField")
                        
                        // MARK: - Forgotten password
                        VStack {
                            Text("Forgotten password?")
                                .frame(width: 360, height: 30)
                                .foregroundColor(AdaptiveColor(light: .textLightBackground, dark: .textDarkBackground).color(for: colorScheme))
...
                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                    .padding()
                                    .accessibilityIdentifier("newUserEmailField")
                                let normalizedEmail = email.trimmingCharacters(in: .whitespacesAndNewlines).lowercased() // To clear whitespaces
                                
...
                                    isShowingForgottenPassword = false
                                }
                                .accessibilityIdentifier("SendResetPasswordButton")
                                .padding()
                                .background(Color.blue)
...
                                    isShowingForgottenPassword = false
                                }
                                .accessibilityIdentifier("CancelResetPasswordButton")
                                .padding()
                            }
...
                        Button(action: {
                            // UITest shortcut:
                            if ProcessInfo.processInfo.environment["UITEST_MODE"] == "true" {
                                isLoggedIn = true
                                return
...
                                .cornerRadius(8)
                        }
                        .accessibilityIdentifier("loginButton")
                        
                        .alert(isPresented: Binding<Bool>(
...
                            set: { _ in viewModel.errorMessage = nil }
                        )) {
                            Alert(title: Text("Login Failed"), message: Text(viewModel.errorMessage ?? ""), dismissButton: .default(Text("OK")))
                        }
                        .padding(.top, 30)
...
                        
                        VStack {
                            Text("Not a member? Sign up")
                                .frame(width: 360, height: 30)
                                .foregroundColor(AdaptiveColor(light: .textLightBackground, dark: .textDarkBackground).color(for: colorScheme))
...
                                        TextField("Enter email address", text: $newEmail)
                                            .textFieldStyle(RoundedBorderTextFieldStyle())
                                            .accessibilityIdentifier("signUpEmailField")
                                        SecureField("Enter password", text: $newPassword)
                                            .textFieldStyle(RoundedBorderTextFieldStyle())
                                            .accessibilityIdentifier("signUpPasswordField")
                                            .hideKeyboardOnSubmit()
                                        SecureField("Confirm password", text: $confirmNewPassword)
                                            .textFieldStyle(RoundedBorderTextFieldStyle())
                                            .accessibilityIdentifier("signUpConfirmPasswordField")
                                            .hideKeyboardOnSubmit()
                                        Text("Password must be at least 9 characters and include 1 uppercase, 1 lowercase, 1 number, and 1 special symbol.")
...
                                        if let warning = passwordMismatchWarning {
                                            Text(warning)
                                                .accessibilityIdentifier("PasswordMismatchWarning")
                                                .accessibilityLabel(warning)
                                                .foregroundColor(.red)
...
                                                Image(systemName: allowStatistics ? "checkmark.square" : "square")
                                            }
                                            .accessibilityIdentifier("statisticsCheckbox")
                                            Text("Allow collection of statistics")
                                                .font(.caption)
...
                                            Button { isShowingStatsInfo = true }
                                            label: {
                                                Image(systemName: "questionmark.circle")
                                            }
                                            .alert("Statistics Collection", isPresented: $isShowingStatsInfo) {
                                                Button("OK", role: .cancel) { }
                                            } message: {
                                                Text("We collect usage data to help improve Hopla")
                                            }
                                        }
...
                                            }
                                        } label: {
                                            Text("Join now")
                                                .foregroundColor(.white)
                                                .frame(width: 200, height: 50)
...
                                                .cornerRadius(8)
                                        }
                                        .id("JoinNowButton")                // give it an ID
                                        .accessibilityIdentifier("JoinNowButton")
                                        .disabled(!isSignUpFormComplete)
...
                                            isShowingSignUp = false
                                        }
                                        .accessibilityIdentifier("cancelSignUp")
                                        .padding(.top, 8)
                                    } // VStack
...
