...
                        MainTabView(navigationPath: $navigationPath,
                                    isDarkMode: isDarkMode)
                        .environmentObject(vm)
                        .environmentObject(loginViewModel)
                        .environmentObject(locationManager)
                        .environmentObject(myHikeVM)
                        .accessibilityIdentifier("homeScreenRoot")
                    } else {
                        // Login screen when not authenticated
                        Login(viewModel: LoginViewModel(),
                              loginViewModel: loginViewModel)
                    }
                }
...
