...
                    .disabled(horseName.isEmpty || horseBreed.isEmpty || selectedImage == nil)
                }
            }
            .navigationTitle("Add a Horse")
            .toolbar {
                ToolbarItem(placement: .bottomBar) {
                    Button("Done") {
                        presentationMode.wrappedValue.dismiss()
                    }
                }
            }
            .sheet(isPresented: $showImagePicker) {
                ImagePicker(sourceType: .photoLibrary, selectedImage: $selectedImage, showImagePicker: $showImagePicker)
...
